--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^7.6.3",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "tslib": "^2.6.2"
   }
 }
