--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mahatejasinnovations-backend",
   "version": "1.0.0",
+  "proxy": "http://localhost:3000",
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -16,11 +17,13 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.41.0",
+    "cloudinary-react": "^1.8.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.2",
+    "imagekitio-react": "^3.0.0",
     "imgur": "^2.3.0",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
